# i2c_puppet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  initialize-submodules.sh  new-docker-build.sh  reset-submodules.sh
.github/workflows/: build.yml
app/: CMakeLists.txt  app_config.h  keyboard.c  keyboard.h  main.c  pi.c  pi.h  reg.c  reg.h  update.c  update.h
boards/: beepy.h
